app/static/css/custom.css
/* ... */
.progress {
    display: block;
    height: 6.5rem;
    border-bottom: 2px solid #33C3F0;
    transition: width 0.5s ease-out;
}
.content {
    min-height: 65%;
}
.section {
    padding: 8rem 0 7rem;
    text-align: center;
}
.section-heading,
.section-description {
    margin-bottom: 1.2rem;
}

/* Header 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
    display: block;
    position: fixed;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 6.5rem;
    background: #fbfaf9;
    border-bottom: 1px solid #ff9900;
}
.header .logo {
    width: 5rem;
    height: 5rem;
    margin: 0.7rem 1rem 0 0;
}
.header .button {
    margin-top: 1.5rem;
}
.header .title {
    margin-top: 1.6rem;
}
@media (min-width: 550px) {
    .header .title {
        margin-top: 1.2rem;
    }
}
.header .user {
    margin: 1.3em 1em 0 0;
    float: right;
}
.header .user a {
    font-weight: bold;
    text-decoration: none;
}
.header-button {
    line-height:8px;
    height:41px;
    padding-top:22px;
}
.header-button:hover {
    border-bottom: 2px solid #ff9900;
    text-decoration: none;
}

/* Hero Section 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.hero {
}
.hero-heading, 
.hero-content {
    margin: 1rem 2rem 2rem 2rem;
}
.hero-heading {
    font-weight: 600;
}
.hero-content {
    font-weight: 400;
}
.glass {
    position: relative;
    background-color: #fff;
    z-index: 0;
    overflow: hidden;
    display: inline-block;
    box-shadow: 0 0 10px #000;
    max-width: 900px;
}
.glass::before {
    width: 100%;
    height: 100%;
    margin-left: -50%;
    overflow: hidden;
    z-index: -1;
    display: inline-block;
    position: absolute;
    content: ' ';
    /* Disabled until blur works in Firefox */
    /*
    -webkit-filter: url('#blur');
    -webkit-filter: blur(5px);
    filter: url('#blur');
    filter: blur(5px);
    opacity: 0.5;
    */
    opacity: 0.2;
}
.glass span {
    display: block;
    margin: -1.5em 0 1em 0;
}
@media (min-width: 550px) {
    .hero {
        padding-bottom: 12rem;
        text-align: left;
        height: 166px;
    }
    .hero-heading {
        font-size: 2.4rem;
    }
    .hero-content {
        font-size: 1.5rem;
    }
    .glass::before {
        margin-left: 0;
    }
    .glass span {
        display: inline-block;
        margin: 0;
        max-width: 270px;
        vertical-align: middle;
    }
}
@media (min-width: 750px) {
    .hero {
        height: 190px;
    }
    .hero-heading {
        font-weight: 300;
        font-size: 4.0rem;
    }
    .hero-content {
        font-size: 2.0rem;
    }
    .hero-button {
        font-size: 2rem;
        line-height: 4.7rem;
        height: 5rem;
    }
    .section-description {
        max-width: 60%;
        margin-left: auto;
        margin-right: auto;
    }
}
@media (min-width: 1200px) {
    .hero-heading {
        font-size: 5.0rem;
    }
}

/* Feed 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.feed .feed-item {
    display: block;
}

/* Support Actions 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.bx-wrapper {
    max-width: initial !important;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    border: none;
    background: none;
    z-index: -10;
}
.bx-wrapper img {
    max-width: initial;
    display: inline;
}
.bx-wrapper .bx-controls-direction a {
    top: 7%; 
    z-index: 99;
    height: 100%;
}
.bx-wrapper .bx-prev {
    left: 0;
    background: linear-gradient(to left, rgba(255,255,255,0), rgba(255,255,255,1)); 
}
.bx-wrapper .bx-next {
    right: 0;
    background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1)); 
}
.bx-wrapper .bx-next:before {
    content: " ";
    background: url(../open-iconic/png/chevron-right-2x.png) no-repeat center right;
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
}
.bx-wrapper .bx-prev:before {
    content: " ";
    background: url(../open-iconic/png/chevron-left-2x.png) no-repeat center left;
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
}
.bx-wrapper .bx-next:focus,
.bx-wrapper .bx-next:hover,
.bx-wrapper .bx-prev:focus,
.bx-wrapper .bx-prev:hover {
    background-position: 0;
}
.bx-wrapper .bx-next:hover:before {
    background: url(../open-iconic/png/chevron-right-3x.png) no-repeat center right;
}
.bx-wrapper .bx-prev:hover:before {
    background: url(../open-iconic/png/chevron-left-3x.png) no-repeat center left;
}
.bx-viewport {
    padding: 0 0 10px 0;
}
.actions-slider {
    margin-right: 16px;
}
.actions-slider li {
}
a.support-action {
    width: 90%;
    text-decoration: none;
    border: 1px solid #3299bb;
    box-shadow: 0 0 10px #e5e5e5;
    padding: 0.5em 1em;
}
.support-action:hover {
    border-color: #1eaeda;
    background-color: #fff;
    cursor: pointer;
}
.support-action:hover h5 {
    text-decoration: underline;
}
.support-action article,
.support-action-counter {
    color: #161310;
}
.support-action-expiration {
    color: #652a28;
}
.support-action-modal-description {
    min-height: 180px;
}


/* Posts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.post {
    -moz-box-shadow: 0 0 10px #e5e5e5;
    -webkit-box-shadow: 0 0 10px #e5e5e5;
    box-shadow: 0 0 10px #e5e5e5;
    padding: 1em;
    margin-top: 2em;
}
.post small a {
    margin-top: 3px;
}
.post article h1, .comment article h1, 
.post article h2, .comment article h2,
.post article h3, .comment article h3,
.post article h4, .comment article h4 {
    font-weight: bold;
    font-size: larger;
}
@media (min-width: 550px) {
    .post-full-view {
        display: block;
        min-height: 299px;
    }
}

/* Footer 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.footer {
    display: block;
    width: 100%;
    margin-top: 3rem;
    padding: 3rem 0;
    background: #161310;
    color: #fff;
}
.footer small {
    color: #fff;
}
.footer a {
    text-decoration: none;
}
/* ... */

